--- a/src/assets/css/_components.scss
+++ b/src/assets/css/_components.scss
@@ -15,7 +15,7 @@
 	border: 0;
 }
 
-// form
+// select
 .select {
 	display: inline-flex;
 	position: relative;
@@ -150,26 +150,8 @@
 .bullet {
 	.bullet__grid {
 		display: grid;
-		// grid-auto-columns: 1fr;
-		// grid-auto-rows: 1fr;
-		// grid-auto-flow: column dense;
-		// grid-auto-rows: repeat(auto);
-		// grid-auto-columns: max-content;
-		grid-template-columns: repeat(auto-fit, minmax(50%, auto));
-		// grid-template-rows: 200px repeat(auto-fill, 100px) 300px;
-		margin-top: -40px;
-		.bullet__group {
-			margin-top: 40px;
-			&:nth-child(3n) {
-				// order : 1;
-					// grid-row: span 1 / auto;
-				// grid-column-start: 1;
-				// grid-column-end: 2;
-				// grid-column: 2;
-				// grid-row-start: span 0;
-				// grid-row-end: span 2;
-			}
-		}
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 40px;
 	}
 	.bullet__title {
 		margin-bottom: 16px;
@@ -189,12 +171,323 @@
 			letter-spacing: -0.025em;
 			@include mixins.PtdRegular();
 		}
-		&:not(:first-child) {
-			
-		}
 		.bullet__row {
 			display: flex;
 			gap: 3px;
+		}
+	}
+	
+	@include breakpoints.mobile() {
+		.bullet__grid {
+			grid-template-columns: 1fr;
+			gap: 30px;
+		}
+		.bullet__title {
+			margin-bottom: 10px;
+			font-size: 14px;
+			line-height: 20px;
+			letter-spacing: -0.012em;
+		}
+		.bullet__list {
+			font-size: 12px;
+			line-height: 16px;
+			letter-spacing: -0.012em;
+			@include mixins.PtdRegular();
+		}
+		.bullet__item {
+			&:not(li) {
+				line-height: 16px;
+				letter-spacing: -0.012em;
+			}
+			.bullet__row {
+				display: flex;
+				gap: 2px;
+			}
+		}
+	}
+}
+
+// form
+.form {
+	.form__row {
+		&:not(:first-child) {
+			margin-top: 30px;
+		}
+	}
+	.form__row--small {
+		max-width: 123px;
+	}
+	.form__row--smedium {
+		width: 45%;
+	}
+	.form__row--medium {
+		width: 55%;
+	}
+	.form__row--large {
+		width: 80%;
+	}
+	.form__row--xlarge {
+		width: 90%;
+	}
+	.form__label {
+		display: flex;
+		padding: 0 9px;
+		.form__text {
+			letter-spacing: -0.025em;
+			@include mixins.PtdMedium();
+		}
+	}
+	.form__set {
+		&:not(:first-child) {
+			margin-top: 12px;
+		}
+	}
+	.form__field {
+		display: flex;
+		align-items: center;
+		.form__col {
+			display: flex;
+			flex: 1;
+			margin-left: 2px;
+			align-items: center;
+			&:first-child {
+				margin-left: 0;
+			}
+			.form__group {
+				position: relative;
+				.form__msg {
+					position: absolute;
+					right: 25px;
+					top: 50%;
+					color: #999;
+					letter-spacing: -0.025em;
+					@include mixins.translate(0, -50%);
+					@include mixins.PtdRegular();
+				}
+			}
+		}
+		.form__col--unit {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex: none;
+			width: 22px;
+			margin: 0;
+			font-size: 18px;
+			letter-spacing: -0.025em;
+			@include mixins.PtdMedium();
+			& + .form__col {
+				margin-left: 0;
+			}
+		}
+		.form__col--offset {
+			padding: 0 9px;
+		}
+		.form__btn {
+			margin-left: 8px;
+		}
+		.form__id {
+			font-size: 20px;
+			@include mixins.PtdRegular();
+		}
+		
+		::-webkit-input-placeholder {
+			@include mixins.PtdRegular();
+		}
+		::-moz-placeholder {
+			@include mixins.PtdRegular();
+		}
+	}
+	.form__field--email {
+		.form__col {
+			&:last-child {
+				flex: .7;
+				margin-left: 7px;
+			}
+		 }
+	}
+	.form__field--mix {
+		.form__col {
+			max-width: 123px;
+			&:last-child {
+				flex-basis: 0%;
+				max-width: auto;
+				margin-left: 15px;
+				white-space: nowrap;
+			}
+		 }
+	}
+
+	.select {
+		width: 100%;
+		min-width: 0;
+	}
+
+	@include breakpoints.mobile() {
+		.form__row {
+			&:not(:first-child) {
+				margin-top: 15px;
+			}
+		}
+		.form__row--small {
+			max-width: 182px;
+		}
+		.form__row--smedium {
+			width: 70%;
+		}
+		.form__row--medium {
+			width: 80%;
+		}
+		.form__row--large {
+			width: auto;
+		}
+		.form__row--xlarge {
+			width: auto;
+		}
+		.form__label {
+			.form__text {
+				font-size: 12px;
+				letter-spacing: -0.012em;
+			}
+		}
+		.form__set {
+			&:not(:first-child) {
+				margin-top: 10px;
+			}
+		}
+		.form__field {
+			.form__col--unit {
+				width: 15px;
+				font-size: 14px;
+				letter-spacing: -0.012em;
+			}
+			.form__id {
+				font-size: 14px;
+				letter-spacing: -0.012em;
+			}
+		}
+		.form__field--email {
+			.form__col {
+				&:last-child {
+					flex: 1;
+					margin-left: 2px;
+				}
+			 }
+		}
+		.form__field--mix {
+			flex-wrap: wrap;
+			.form__col {
+				max-width: 123px;
+				&:last-child {
+					flex: none;
+					width: 100%;
+					max-width: none;
+					margin-left: 0;
+					margin-top: 11.5px;
+				}
+			 }
+		}
+	}
+}
+
+.table {
+	.table__table {
+		.table__row {
+			display: flex;
+			align-items: baseline;
+			padding: 1px 0;
+			min-height: 58px;
+			&:last-child {
+				padding-bottom: 0;
+			}
+			.table__left {
+				width: 140px;
+				letter-spacing: -0.025em;
+				@include mixins.PtdMedium();
+			}
+			.table__right {
+				flex: 1;
+			}
+			input + span {
+				display: block;
+				padding-left: 10px;
+				margin-top: 5px;
+				font-size: 12px;
+				@include mixins.PtdRegular();
+			}
+		}
+	}
+
+	.form {
+		.form__row {
+			&:not(:first-child) {
+				margin-top: 2px;
+			}
+		}
+		.form__field {
+			::-webkit-input-placeholder {
+				text-align: right;
+			}
+			::-moz-placeholder {
+				text-align: right;
+			}
+		}
+	}
+
+	@include breakpoints.mobile() {
+		.table__table {
+			.table__row {
+				display: block;
+				padding: 0;
+				&:not(:first-child) {
+					margin-top: 20px;
+				}
+				.table__left {
+					width: auto;
+					margin-bottom: 10px;
+					font-size: 12px;
+				}
+			}
+		}
+
+		.form {
+			.form__field {
+				::-webkit-input-placeholder {
+					text-align: left;
+				}
+				::-moz-placeholder {
+					text-align: left;
+				}
+			}
+		}
+	}
+}
+
+.required {
+	position: relative;
+	padding-right: 13px;
+	letter-spacing: -0.025em;
+	@include mixins.PtdRegular();
+	&:before {
+		content: '';
+		display: block;
+		position: absolute;
+		top: 3px;
+		right: 0;
+		width: 6px;
+		height: 6px;
+		border-radius: 50%;
+		background-color: #31cdd6;
+	}
+
+	@include breakpoints.mobile() {
+		padding-right: 11px;
+		font-size: 12px;
+		letter-spacing: -0.012em;
+		&:before {
+			top: 3px;
+			width: 4px;
+			height: 4px;
 		}
 	}
 }
@@ -266,6 +559,37 @@
 			cursor: pointer;
 		}
 	}
+	.layer__header {
+		margin-bottom: 50px;
+		.layer__title {
+			font-size: 32px;
+			letter-spacing: -0.025em;
+			@include mixins.PtdMedium();
+		}
+	}
+	.layer__note {
+		letter-spacing: -0.025em;
+		&:not(:last-child) {
+			margin-bottom: 30px;
+		}
+		.layer__title {
+			margin-bottom: 14px;
+			@include mixins.PtdSemiBold();
+		}
+		.layer__desc {
+			line-height: 20px;
+			@include mixins.PtdRegular();
+		}
+	}
+	
+	.button {
+		margin-top: 10px;
+		.button__container {
+			.button__item--medium {
+				min-width: 101px;
+			}
+		}
+	}
 	@include breakpoints.mobile() {
 		.layer__wrap {
 			border-radius: 35px;
@@ -277,6 +601,32 @@
 		.layer__button {
 			.btn {
 				font-size: 14px;
+			}
+		}
+		.layer__header {
+			margin-bottom: 22px;
+			.layer__title {
+				font-size: 20px;
+				letter-spacing: -0.012em;
+			}
+		}
+		.layer__note {
+			letter-spacing: -0.012em;
+			.layer__title {
+				font-size: 12px;
+			}
+			.layer__desc {
+				font-size: 12px;
+				line-height: 16px;
+			}
+		}
+
+		.button {
+			margin-top: 10px;
+			.button__container {
+				.button__item--medium {
+					min-width: 90px;
+				}
 			}
 		}
 	}
