상품 목록, 상세 수정

--- a/src/assets/css/_menu.scss
+++ b/src/assets/css/_menu.scss
@@ -319,6 +319,10 @@
 				// visibility: hidden;
 				z-index: 1;
 			}
+
+			@include breakpoints.mobile() {
+				display: none;
+			}
 		}
 	}
 	.button--visible {
